syntax = "proto3";

package ezex_users;

option go_package = "github.com/ezex-io/ezex-proto/go/users";

service UsersService {
  rpc SaveSecurityImage(SaveSecurityImageRequest) returns (SaveSecurityImageResponse) {}
  rpc GetSecurityImage(GetSecurityImageRequest) returns (GetSecurityImageResponse) {}
  rpc ProcessFirebaseLogin(ProcessFirebaseLoginRequest) returns (ProcessFirebaseLoginResponse) {}
}

message ProcessFirebaseLoginRequest {
  string firebase_user_id = 1;
  string email = 2;
}

message ProcessFirebaseLoginResponse {
  string user_id = 1;
}

message SaveSecurityImageRequest {
  string email = 1;
  string security_image = 2;
  string security_phrase = 3;
}

message SaveSecurityImageResponse {}

message GetSecurityImageRequest {
  string email = 1;
}

message GetSecurityImageResponse {
   string security_image = 2;
   string security_phrase = 3;
}
